2006-12-18  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: exact search for gender (bug #633)
	* src/DisplayModels/_PeopleModel.py: exact search for gender (bug #633)
	* src/Filters/_SearchFilter.py: exact search for gender (bug #633)
	* src/Filters/__init__.py: export ExactSearchFilter
	* src/DataViews/_EventView.py: disable items with readonly db (bug #771)
	* src/DataViews/_PersonView.py: disable items with readonly db (bug #771)
	* src/DataViews/_RelationView.py: disable items with readonly db (bug #771)
	* src/ViewManager.py: disable items with readonly db (bug #771)
	* src/PageView.py: disable items with readonly db (bug #771)
	* src/plugins/Desbrowser.py (DesBrowse.button_press_event): fix typo 
	(from bmcage)

2006-12-16  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: proper handling of unknown source tags (bug #654)

2006-12-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsWidgets.py (PlaceEntry.set_button): fix tooltips (bug #764)
	* src/glade/gramps.glade: remove static tooltip
	* src/GrampsDb/_ReadGedcom.py (import2): import a readonly file properly (bug #765)

2006-12-15  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Editors/_EditSourceRef.py,
	* src/Editors/_EditRepoRef.py,
	* src/Editors/_EditUrl.py,
	* src/Editors/_EditMediaRef.py,
	* src/Editors/_EditEventRef.py,
	* src/Editors/_EditFamily.py,
	* src/DisplayTabs/_NameEmbedList.py,
	* src/DisplayTabs/_EmbeddedList.py,
	* src/DisplayTabs/_GalleryTab.py,
	* src/DisplayTabs/_DataEmbedList.py: Disable some more controls when
	readonly

2006-12-14  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/ChangeNames.py (toggled): Add method; 
	(display): Connect renderer to the handling method.

2006-12-14  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Selectors/_SelectPerson.py: Enable markup for bith date column
	to enable birth fallback in italics (closes #763)

	* src/DataViews/_PedigreeView.py,
	* src/DataViews/_RelationView.py,